Fix like icon being on a different line from the text on smaller screen widths

--- a/src/renderer/components/watch-video-info/watch-video-info.scss
+++ b/src/renderer/components/watch-video-info/watch-video-info.scss
@@ -93,6 +93,8 @@
 
   .likeCount {
     margin-inline-end: 0;
+    display: flex;
+    gap: 3px;
   }
 }
 }
